--- a/MoneyManager/MoneyManager/Views/Income/All.cshtml
+++ b/MoneyManager/MoneyManager/Views/Income/All.cshtml
@@ -38,7 +38,7 @@
                 <p class="mb-0">Date: @income?.Date?.ToShortDateString()</p>
                 @if (@income.Description != null)
                 {
-                    <p class="mb-0">Description: @income.Description</p>
+                    <p class="mb-0">Description: @Html.Raw(@income.Description)</p>
                 }
             </div>
 
